--- a/notebooks/TrialInfo_test.ipynb
+++ b/notebooks/TrialInfo_test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-03-14 14:53:43,960][INFO]: Connecting molly@gl-ash.biostr.washington.edu:3306\n",
-      "[2024-03-14 14:53:43,981][INFO]: Connected molly@gl-ash.biostr.washington.edu:3306\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datajoint as dj\n",
     "\n",
@@ -25,132 +16,134 @@
     "from spyglass.common.common_behav import StateScriptFile\n",
     "from spyglass.common.common_task import TaskEpoch\n",
     "from spyglass.common.common_nwbfile import AnalysisNwbfile\n",
-    "from utils.parse_trials_helper import V8TrialParser\n",
-    "from trials import TrialInfo\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from trials import TrialInfo\n",
+    "from utils.parse_trials_helper import V8TrialParser"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"604pt\" height=\"318pt\" viewBox=\"0.00 0.00 603.50 318.00\">\n",
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"643pt\" height=\"318pt\" viewBox=\"0.00 0.00 642.50 318.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 314)\">\n",
-       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-314 599.5,-314 599.5,4 -4,4\"/>\n",
-       "<!-- `common_task`.`task` -->\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-314 638.5,-314 638.5,4 -4,4\"/>\n",
+       "<!-- `common_interval`.`interval_list` -->\n",
        "<g id=\"node1\" class=\"node\">\n",
+       "<title>`common_interval`.`interval_list`</title>\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"558,-239 371,-239 371,-204 558,-204 558,-239\"/>\n",
+       "<text text-anchor=\"start\" x=\"379\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_interval`.`interval_list`</text>\n",
+       "</g>\n",
+       "<!-- TaskEpoch -->\n",
+       "<g id=\"node7\" class=\"node\">\n",
+       "<title>TaskEpoch</title>\n",
+       "<g id=\"a_node7\"><a xlink:title=\"→ `common_session`.`_session`\repoch                \r------------------------------\r→ `common_task`.`task`\r→ [nullable] `common_device`.`camera_device`\r→ `common_interval`.`interval_list`\rtask_environment=null \rcamera_names         \r\">\n",
+       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"357.5\" cy=\"-150.5\" rx=\"47.5\" ry=\"17.5\"/>\n",
+       "<text text-anchor=\"start\" x=\"327.5\" y=\"-148.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">TaskEpoch</text>\n",
+       "</a>\n",
+       "</g>\n",
+       "</g>\n",
+       "<!-- `common_interval`.`interval_list`&#45;&gt;TaskEpoch -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>`common_interval`.`interval_list`-&gt;TaskEpoch</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M438.87,-203.97C420.94,-192.41 397.22,-177.11 380.02,-166.02\"/>\n",
+       "</g>\n",
+       "<!-- `common_task`.`task` -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
        "<title>`common_task`.`task`</title>\n",
        "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"131,-239 0,-239 0,-204 131,-204 131,-239\"/>\n",
        "<text text-anchor=\"start\" x=\"8\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_task`.`task`</text>\n",
        "</g>\n",
-       "<!-- TaskEpoch -->\n",
+       "<!-- `common_task`.`task`&#45;&gt;TaskEpoch -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>`common_task`.`task`-&gt;TaskEpoch</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M131.03,-205.02C188.7,-191.39 270.74,-172 318.62,-160.69\"/>\n",
+       "</g>\n",
+       "<!-- `common_device`.`camera_device` -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>`common_device`.`camera_device`</title>\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"353.5,-239 149.5,-239 149.5,-204 353.5,-204 353.5,-239\"/>\n",
+       "<text text-anchor=\"start\" x=\"157.5\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_device`.`camera_device`</text>\n",
+       "</g>\n",
+       "<!-- `common_device`.`camera_device`&#45;&gt;TaskEpoch -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>`common_device`.`camera_device`-&gt;TaskEpoch</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M276.89,-203.97C294.65,-192.41 318.15,-177.11 335.2,-166.02\"/>\n",
+       "</g>\n",
+       "<!-- `common_session`.`_session` -->\n",
+       "<g id=\"node4\" class=\"node\">\n",
+       "<title>`common_session`.`_session`</title>\n",
+       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"524.5\" cy=\"-292.5\" rx=\"110\" ry=\"17.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"524.5\" y=\"-289.4\" font-family=\"arial\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">`common_session`.`_session`</text>\n",
+       "</g>\n",
+       "<!-- `common_session`.`_session`&#45;&gt;`common_interval`.`interval_list` -->\n",
+       "<g id=\"edge4\" class=\"edge\">\n",
+       "<title>`common_session`.`_session`-&gt;`common_interval`.`interval_list`</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M509.98,-274.8C500.54,-263.95 488.3,-249.87 478.89,-239.05\"/>\n",
+       "</g>\n",
+       "<!-- `common_session`.`_session`&#45;&gt;TaskEpoch -->\n",
+       "<g id=\"edge5\" class=\"edge\">\n",
+       "<title>`common_session`.`_session`-&gt;TaskEpoch</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M542.79,-275.2C561.3,-256.73 584.9,-226.28 567.5,-204 547.44,-178.3 458.11,-163.32 402.62,-156.34\"/>\n",
+       "</g>\n",
+       "<!-- AnalysisNwbfile -->\n",
        "<g id=\"node5\" class=\"node\">\n",
-       "<title>TaskEpoch</title>\n",
-       "<g id=\"a_node5\"><a xlink:title=\"→ `common_session`.`_session`\repoch                \r------------------------------\r→ `common_task`.`task`\r→ [nullable] `common_device`.`camera_device`\r→ `common_interval`.`interval_list`\rtask_environment=null \rcamera_names         \r\">\n",
-       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"302.5\" cy=\"-150.5\" rx=\"47.5\" ry=\"17.5\"/>\n",
-       "<text text-anchor=\"start\" x=\"272.5\" y=\"-148.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">TaskEpoch</text>\n",
+       "<title>AnalysisNwbfile</title>\n",
+       "<g id=\"a_node5\"><a xlink:title=\"analysis_file_name   \r------------------------------\r→ `common_nwbfile`.`nwbfile`\ranalysis_file_abs_path \ranalysis_file_description=&quot;&quot; \ranalysis_parameters=null \rINDEX (analysis_file_abs_path)\r\">\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"280,-97 177,-97 177,-62 280,-62 280,-97\"/>\n",
+       "<text text-anchor=\"start\" x=\"185\" y=\"-77.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">AnalysisNwbfile</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
-       "<!-- `common_task`.`task`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>`common_task`.`task`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M122.27,-203.97C167.05,-190.94 228.15,-173.15 266.45,-162\"/>\n",
+       "<!-- TrialInfo -->\n",
+       "<g id=\"node8\" class=\"node\">\n",
+       "<title>TrialInfo</title>\n",
+       "<g id=\"a_node8\"><a xlink:title=\"→ StateScriptFile\r------------------------------\r→ AnalysisNwbfile\rtrial_info_object_id \rparser               \rdescriptors=null     \r\">\n",
+       "<ellipse fill=\"#ff0000\" fill-opacity=\"0.125490\" stroke=\"#ff0000\" stroke-opacity=\"0.125490\" cx=\"292.5\" cy=\"-13\" rx=\"13\" ry=\"13\"/>\n",
+       "<text text-anchor=\"middle\" x=\"292.5\" y=\"-9.9\" font-family=\"arial\" font-size=\"12.00\" fill=\"#7f0000\" fill-opacity=\"0.627451\">TrialInfo</text>\n",
+       "</a>\n",
        "</g>\n",
-       "<!-- `common_interval`.`interval_list` -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
-       "<title>`common_interval`.`interval_list`</title>\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"336,-239 149,-239 149,-204 336,-204 336,-239\"/>\n",
-       "<text text-anchor=\"start\" x=\"157\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_interval`.`interval_list`</text>\n",
        "</g>\n",
-       "<!-- `common_interval`.`interval_list`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
-       "<title>`common_interval`.`interval_list`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M257.02,-203.8C266.6,-192.79 279.06,-178.45 288.52,-167.57\"/>\n",
-       "</g>\n",
-       "<!-- `common_session`.`_session` -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
-       "<title>`common_session`.`_session`</title>\n",
-       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"302.5\" cy=\"-292.5\" rx=\"110\" ry=\"17.5\"/>\n",
-       "<text text-anchor=\"middle\" x=\"302.5\" y=\"-289.4\" font-family=\"arial\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">`common_session`.`_session`</text>\n",
-       "</g>\n",
-       "<!-- `common_session`.`_session`&#45;&gt;`common_interval`.`interval_list` -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
-       "<title>`common_session`.`_session`-&gt;`common_interval`.`interval_list`</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M287.98,-274.8C278.54,-263.95 266.3,-249.87 256.89,-239.05\"/>\n",
-       "</g>\n",
-       "<!-- `common_session`.`_session`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge4\" class=\"edge\">\n",
-       "<title>`common_session`.`_session`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M320.66,-274.91C329.71,-265.4 339.71,-252.66 344.5,-239 349.65,-224.32 349.65,-218.68 344.5,-204 339.55,-189.9 329.05,-176.78 319.79,-167.18\"/>\n",
-       "</g>\n",
-       "<!-- `common_device`.`camera_device` -->\n",
-       "<g id=\"node4\" class=\"node\">\n",
-       "<title>`common_device`.`camera_device`</title>\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"595.5,-239 391.5,-239 391.5,-204 595.5,-204 595.5,-239\"/>\n",
-       "<text text-anchor=\"start\" x=\"399.5\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_device`.`camera_device`</text>\n",
-       "</g>\n",
-       "<!-- `common_device`.`camera_device`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge5\" class=\"edge\">\n",
-       "<title>`common_device`.`camera_device`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M447.75,-203.97C413.1,-191.45 366.32,-174.55 335.32,-163.36\"/>\n",
+       "<!-- AnalysisNwbfile&#45;&gt;TrialInfo -->\n",
+       "<g id=\"edge6\" class=\"edge\">\n",
+       "<title>AnalysisNwbfile-&gt;TrialInfo</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M244.98,-61.89C257.28,-49.5 273.61,-33.04 283.57,-23\"/>\n",
        "</g>\n",
        "<!-- StateScriptFile -->\n",
        "<g id=\"node6\" class=\"node\">\n",
        "<title>StateScriptFile</title>\n",
        "<g id=\"a_node6\"><a xlink:title=\"→ TaskEpoch\r------------------------------\rfile_object_id       \r\">\n",
-       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"302.5\" cy=\"-79.5\" rx=\"59.25\" ry=\"17.5\"/>\n",
-       "<text text-anchor=\"middle\" x=\"302.5\" y=\"-76.4\" font-family=\"arial\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">StateScriptFile</text>\n",
-       "</a>\n",
-       "</g>\n",
-       "</g>\n",
-       "<!-- TaskEpoch&#45;&gt;StateScriptFile -->\n",
-       "<g id=\"edge6\" class=\"edge\">\n",
-       "<title>TaskEpoch-&gt;StateScriptFile</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M302.5,-132.8C302.5,-121.95 302.5,-107.87 302.5,-97.05\"/>\n",
-       "</g>\n",
-       "<!-- TrialInfo -->\n",
-       "<g id=\"node7\" class=\"node\">\n",
-       "<title>TrialInfo</title>\n",
-       "<g id=\"a_node7\"><a xlink:title=\"→ StateScriptFile\r------------------------------\r→ AnalysisNwbfile\rtrial_info_object_id \rparser               \rdescriptors=null     \r\">\n",
-       "<ellipse fill=\"#ff0000\" fill-opacity=\"0.125490\" stroke=\"#ff0000\" stroke-opacity=\"0.125490\" cx=\"366.5\" cy=\"-13\" rx=\"13\" ry=\"13\"/>\n",
-       "<text text-anchor=\"middle\" x=\"366.5\" y=\"-9.9\" font-family=\"arial\" font-size=\"12.00\" fill=\"#7f0000\" fill-opacity=\"0.627451\">TrialInfo</text>\n",
+       "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"357.5\" cy=\"-79.5\" rx=\"59.25\" ry=\"17.5\"/>\n",
+       "<text text-anchor=\"middle\" x=\"357.5\" y=\"-76.4\" font-family=\"arial\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">StateScriptFile</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
        "<!-- StateScriptFile&#45;&gt;TrialInfo -->\n",
        "<g id=\"edge7\" class=\"edge\">\n",
        "<title>StateScriptFile-&gt;TrialInfo</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M318.32,-62.56C330.76,-50.02 347.62,-33.03 357.74,-22.82\"/>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M341.43,-62.56C328.8,-50.02 311.67,-33.03 301.39,-22.82\"/>\n",
        "</g>\n",
-       "<!-- AnalysisNwbfile -->\n",
-       "<g id=\"node8\" class=\"node\">\n",
-       "<title>AnalysisNwbfile</title>\n",
-       "<g id=\"a_node8\"><a xlink:title=\"analysis_file_name   \r------------------------------\r→ `common_nwbfile`.`nwbfile`\ranalysis_file_abs_path \ranalysis_file_description=&quot;&quot; \ranalysis_parameters=null \rINDEX (analysis_file_abs_path)\r\">\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"483,-97 380,-97 380,-62 483,-62 483,-97\"/>\n",
-       "<text text-anchor=\"start\" x=\"388\" y=\"-77.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">AnalysisNwbfile</text>\n",
-       "</a>\n",
-       "</g>\n",
-       "</g>\n",
-       "<!-- AnalysisNwbfile&#45;&gt;TrialInfo -->\n",
+       "<!-- TaskEpoch&#45;&gt;StateScriptFile -->\n",
        "<g id=\"edge8\" class=\"edge\">\n",
-       "<title>AnalysisNwbfile-&gt;TrialInfo</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M414.76,-61.89C402.27,-49.5 385.69,-33.04 375.57,-23\"/>\n",
+       "<title>TaskEpoch-&gt;StateScriptFile</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M357.5,-132.8C357.5,-121.95 357.5,-107.87 357.5,-97.05\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>"
       ],
       "text/plain": [
-       "<datajoint.diagram.Diagram at 0x7f68d0904f40>"
+       "<datajoint.diagram.Diagram at 0x7f47b2a65ee0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +170,7 @@
        "descriptors=null     : blob                         # global descriptors for task"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +200,7 @@
        " 'file_object_id': 'bbfa4352-be80-4870-9951-21273a1be35d'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +332,7 @@
        " (Total: 0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +433,7 @@
        " (Total: 0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
