--- a/notebooks/TrialInfo_test.ipynb
+++ b/notebooks/TrialInfo_test.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import datajoint as dj\n",
     "\n",
-    "dj.config['database.host'] = \"gl-ash.biostr.washington.edu\"\n",
-    "dj.config['database.user'] = \"molly\"\n",
+    "# fill in host, user, and port\n",
+    "dj.config['database.host'] = \"\" # set datajoint host\n",
+    "dj.config['database.user'] = \"\" # set datajoint username\n",
     "dj.config['database.port'] = 3306\n",
     "\n",
     "from spyglass.utils.nwb_helper_fn import get_nwb_file\n",
