update gitignore + notebook

--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup: \n",
+    "Setup conda/mamba environment as specified in https://github.com/LorenFrankLab/spyglass/blob/master/environment.yml"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -9,8 +17,8 @@
     "import datajoint as dj\n",
     "\n",
     "# fill in host, user, and port\n",
-    "dj.config['database.host'] = \"\" # set datajoint host\n",
-    "dj.config['database.user'] = \"\" # set datajoint username\n",
+    "dj.config['database.host'] = \"gl-ash.biostr.washington.edu\"\n",
+    "dj.config['database.user'] = \"molly\"\n",
     "dj.config['database.port'] = 3306\n",
     "\n",
     "from spyglass.utils.nwb_helper_fn import get_nwb_file\n",
