--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -12,21 +12,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-03-14 17:19:11,119][INFO]: Connecting molly@gl-ash.biostr.washington.edu:3306\n",
+      "[2024-03-14 17:19:11,140][INFO]: Connected molly@gl-ash.biostr.washington.edu:3306\n"
+     ]
+    }
+   ],
    "source": [
     "import datajoint as dj\n",
     "\n",
-    "# fill in host, user, and port\n",
-    "dj.config['database.host'] = \"gl-ash.biostr.washington.edu\"\n",
-    "dj.config['database.user'] = \"molly\"\n",
+    "dj.config['database.host'] = \"gl-ash.biostr.washington.edu\" # enter datajoint host url\n",
+    "dj.config['database.user'] = \"molly\" # enter datajoint username\n",
     "dj.config['database.port'] = 3306\n",
     "\n",
     "from spyglass.utils.nwb_helper_fn import get_nwb_file\n",
     "from spyglass.common.common_behav import StateScriptFile\n",
     "from spyglass.common.common_task import TaskEpoch\n",
     "from spyglass.common.common_nwbfile import AnalysisNwbfile\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -45,47 +51,47 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"643pt\" height=\"318pt\" viewBox=\"0.00 0.00 642.50 318.00\">\n",
        "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 314)\">\n",
        "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-314 638.5,-314 638.5,4 -4,4\"/>\n",
-       "<!-- `common_interval`.`interval_list` -->\n",
+       "<!-- `common_task`.`task` -->\n",
        "<g id=\"node1\" class=\"node\">\n",
-       "<title>`common_interval`.`interval_list`</title>\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"558,-239 371,-239 371,-204 558,-204 558,-239\"/>\n",
-       "<text text-anchor=\"start\" x=\"379\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_interval`.`interval_list`</text>\n",
+       "<title>`common_task`.`task`</title>\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"131,-239 0,-239 0,-204 131,-204 131,-239\"/>\n",
+       "<text text-anchor=\"start\" x=\"8\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_task`.`task`</text>\n",
        "</g>\n",
        "<!-- TaskEpoch -->\n",
-       "<g id=\"node7\" class=\"node\">\n",
+       "<g id=\"node6\" class=\"node\">\n",
        "<title>TaskEpoch</title>\n",
-       "<g id=\"a_node7\"><a xlink:title=\"→ `common_session`.`_session`\repoch                \r------------------------------\r→ `common_task`.`task`\r→ [nullable] `common_device`.`camera_device`\r→ `common_interval`.`interval_list`\rtask_environment=null \rcamera_names         \r\">\n",
+       "<g id=\"a_node6\"><a xlink:title=\"→ `common_session`.`_session`\repoch                \r------------------------------\r→ `common_task`.`task`\r→ [nullable] `common_device`.`camera_device`\r→ `common_interval`.`interval_list`\rtask_environment=null \rcamera_names         \r\">\n",
        "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"357.5\" cy=\"-150.5\" rx=\"47.5\" ry=\"17.5\"/>\n",
        "<text text-anchor=\"start\" x=\"327.5\" y=\"-148.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">TaskEpoch</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
-       "<!-- `common_interval`.`interval_list`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge1\" class=\"edge\">\n",
-       "<title>`common_interval`.`interval_list`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M438.87,-203.97C420.94,-192.41 397.22,-177.11 380.02,-166.02\"/>\n",
-       "</g>\n",
-       "<!-- `common_task`.`task` -->\n",
-       "<g id=\"node2\" class=\"node\">\n",
-       "<title>`common_task`.`task`</title>\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"131,-239 0,-239 0,-204 131,-204 131,-239\"/>\n",
-       "<text text-anchor=\"start\" x=\"8\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_task`.`task`</text>\n",
-       "</g>\n",
        "<!-- `common_task`.`task`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge2\" class=\"edge\">\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
        "<title>`common_task`.`task`-&gt;TaskEpoch</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M131.03,-205.02C188.7,-191.39 270.74,-172 318.62,-160.69\"/>\n",
        "</g>\n",
        "<!-- `common_device`.`camera_device` -->\n",
-       "<g id=\"node3\" class=\"node\">\n",
+       "<g id=\"node2\" class=\"node\">\n",
        "<title>`common_device`.`camera_device`</title>\n",
        "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"353.5,-239 149.5,-239 149.5,-204 353.5,-204 353.5,-239\"/>\n",
        "<text text-anchor=\"start\" x=\"157.5\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_device`.`camera_device`</text>\n",
        "</g>\n",
        "<!-- `common_device`.`camera_device`&#45;&gt;TaskEpoch -->\n",
-       "<g id=\"edge3\" class=\"edge\">\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
        "<title>`common_device`.`camera_device`-&gt;TaskEpoch</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M276.89,-203.97C294.65,-192.41 318.15,-177.11 335.2,-166.02\"/>\n",
+       "</g>\n",
+       "<!-- `common_interval`.`interval_list` -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>`common_interval`.`interval_list`</title>\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"558,-239 371,-239 371,-204 558,-204 558,-239\"/>\n",
+       "<text text-anchor=\"start\" x=\"379\" y=\"-219.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">`common_interval`.`interval_list`</text>\n",
+       "</g>\n",
+       "<!-- `common_interval`.`interval_list`&#45;&gt;TaskEpoch -->\n",
+       "<g id=\"edge3\" class=\"edge\">\n",
+       "<title>`common_interval`.`interval_list`-&gt;TaskEpoch</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M438.87,-203.97C420.94,-192.41 397.22,-177.11 380.02,-166.02\"/>\n",
        "</g>\n",
        "<!-- `common_session`.`_session` -->\n",
        "<g id=\"node4\" class=\"node\">\n",
@@ -101,14 +107,14 @@
        "<!-- `common_session`.`_session`&#45;&gt;TaskEpoch -->\n",
        "<g id=\"edge5\" class=\"edge\">\n",
        "<title>`common_session`.`_session`-&gt;TaskEpoch</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M542.79,-275.2C561.3,-256.73 584.9,-226.28 567.5,-204 547.44,-178.3 458.11,-163.32 402.62,-156.34\"/>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-opacity=\"0.250980\" d=\"M542.47,-275.17C560.66,-256.66 583.81,-226.19 566.5,-204 546.54,-178.41 457.64,-163.39 402.41,-156.37\"/>\n",
        "</g>\n",
        "<!-- AnalysisNwbfile -->\n",
        "<g id=\"node5\" class=\"node\">\n",
        "<title>AnalysisNwbfile</title>\n",
        "<g id=\"a_node5\"><a xlink:title=\"analysis_file_name   \r------------------------------\r→ `common_nwbfile`.`nwbfile`\ranalysis_file_abs_path \ranalysis_file_description=&quot;&quot; \ranalysis_parameters=null \rINDEX (analysis_file_abs_path)\r\">\n",
-       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"280,-97 177,-97 177,-62 280,-62 280,-97\"/>\n",
-       "<text text-anchor=\"start\" x=\"185\" y=\"-77.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">AnalysisNwbfile</text>\n",
+       "<polygon fill=\"#00ff00\" fill-opacity=\"0.188235\" stroke=\"#00ff00\" stroke-opacity=\"0.188235\" points=\"538,-97 435,-97 435,-62 538,-62 538,-97\"/>\n",
+       "<text text-anchor=\"start\" x=\"443\" y=\"-77.4\" font-family=\"arial\" text-decoration=\"underline\" font-size=\"12.00\" fill=\"darkgreen\">AnalysisNwbfile</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
@@ -116,40 +122,40 @@
        "<g id=\"node8\" class=\"node\">\n",
        "<title>TrialInfo</title>\n",
        "<g id=\"a_node8\"><a xlink:title=\"→ StateScriptFile\r------------------------------\r→ AnalysisNwbfile\rtrial_info_object_id \rparser               \rdescriptors=null     \r\">\n",
-       "<ellipse fill=\"#ff0000\" fill-opacity=\"0.125490\" stroke=\"#ff0000\" stroke-opacity=\"0.125490\" cx=\"292.5\" cy=\"-13\" rx=\"13\" ry=\"13\"/>\n",
-       "<text text-anchor=\"middle\" x=\"292.5\" y=\"-9.9\" font-family=\"arial\" font-size=\"12.00\" fill=\"#7f0000\" fill-opacity=\"0.627451\">TrialInfo</text>\n",
+       "<ellipse fill=\"#ff0000\" fill-opacity=\"0.125490\" stroke=\"#ff0000\" stroke-opacity=\"0.125490\" cx=\"421.5\" cy=\"-13\" rx=\"13\" ry=\"13\"/>\n",
+       "<text text-anchor=\"middle\" x=\"421.5\" y=\"-9.9\" font-family=\"arial\" font-size=\"12.00\" fill=\"#7f0000\" fill-opacity=\"0.627451\">TrialInfo</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
        "<!-- AnalysisNwbfile&#45;&gt;TrialInfo -->\n",
        "<g id=\"edge6\" class=\"edge\">\n",
        "<title>AnalysisNwbfile-&gt;TrialInfo</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M244.98,-61.89C257.28,-49.5 273.61,-33.04 283.57,-23\"/>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"0.75\" stroke-dasharray=\"5,2\" stroke-opacity=\"0.250980\" d=\"M469.76,-61.89C457.27,-49.5 440.69,-33.04 430.57,-23\"/>\n",
        "</g>\n",
        "<!-- StateScriptFile -->\n",
-       "<g id=\"node6\" class=\"node\">\n",
+       "<g id=\"node7\" class=\"node\">\n",
        "<title>StateScriptFile</title>\n",
-       "<g id=\"a_node6\"><a xlink:title=\"→ TaskEpoch\r------------------------------\rfile_object_id       \r\">\n",
+       "<g id=\"a_node7\"><a xlink:title=\"→ TaskEpoch\r------------------------------\rfile_object_id       \r\">\n",
        "<ellipse fill=\"#00007f\" fill-opacity=\"0.250980\" stroke=\"#00007f\" stroke-opacity=\"0.250980\" cx=\"357.5\" cy=\"-79.5\" rx=\"59.25\" ry=\"17.5\"/>\n",
        "<text text-anchor=\"middle\" x=\"357.5\" y=\"-76.4\" font-family=\"arial\" font-size=\"12.00\" fill=\"#00007f\" fill-opacity=\"0.627451\">StateScriptFile</text>\n",
        "</a>\n",
        "</g>\n",
        "</g>\n",
-       "<!-- StateScriptFile&#45;&gt;TrialInfo -->\n",
-       "<g id=\"edge7\" class=\"edge\">\n",
-       "<title>StateScriptFile-&gt;TrialInfo</title>\n",
-       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M341.43,-62.56C328.8,-50.02 311.67,-33.03 301.39,-22.82\"/>\n",
-       "</g>\n",
        "<!-- TaskEpoch&#45;&gt;StateScriptFile -->\n",
-       "<g id=\"edge8\" class=\"edge\">\n",
+       "<g id=\"edge7\" class=\"edge\">\n",
        "<title>TaskEpoch-&gt;StateScriptFile</title>\n",
        "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M357.5,-132.8C357.5,-121.95 357.5,-107.87 357.5,-97.05\"/>\n",
+       "</g>\n",
+       "<!-- StateScriptFile&#45;&gt;TrialInfo -->\n",
+       "<g id=\"edge8\" class=\"edge\">\n",
+       "<title>StateScriptFile-&gt;TrialInfo</title>\n",
+       "<path fill=\"none\" stroke=\"#000000\" stroke-width=\"2\" stroke-opacity=\"0.250980\" d=\"M373.32,-62.56C385.76,-50.02 402.62,-33.03 412.74,-22.82\"/>\n",
        "</g>\n",
        "</g>\n",
        "</svg>"
       ],
       "text/plain": [
-       "<datajoint.diagram.Diagram at 0x7f47b2a65ee0>"
+       "<datajoint.diagram.Diagram at 0x7f30689285b0>"
       ]
      },
      "execution_count": 3,
@@ -192,31 +198,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing insert of a single epoch:\n",
-    "Normally this would be auto populated from each entry in StateScriptFile, but for now we can test inserting a single epoch"
+    "## Testing insert of a single session:\n",
+    "Normally this would be auto computed from each entry in StateScriptFile, but for now we can test inserting a single session"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'nwb_file_name': 'bobrick20231114_.nwb',\n",
-       " 'epoch': 4,\n",
-       " 'file_object_id': 'bbfa4352-be80-4870-9951-21273a1be35d'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "key = (StateScriptFile & {'nwb_file_name' : 'bobrick20231114_.nwb', 'epoch':4}).fetch1() # example of a StateScriptFile primary key\n",
-    "key"
+    "nwb_file_name = 'bobrick20231114_.nwb'"
    ]
   },
   {
@@ -243,7 +235,7 @@
     }
    ],
    "source": [
-    "TrialInfo.populate(key)"
+    "TrialInfo.populate(StateScriptFile & {'nwb_file_name' : nwb_file_name})"
    ]
   },
   {
@@ -328,17 +320,28 @@
        "                            <p id=\"nonprimary\">descriptors</p>\n",
        "                            <span class=\"djtooltiptext\">global descriptors for task</span>\n",
        "                        </div> </th> </tr> </thead>\n",
-       "            <tbody> <tr>  </tr> </tbody>\n",
+       "            <tbody> <tr> <td>bobrick20231114_.nwb</td>\n",
+       "<td>2</td>\n",
+       "<td>bobrick20231114_LE2O27CJEA.nwb</td>\n",
+       "<td>294c1093-2c2f-44a5-bf5a-003abaff87d4</td>\n",
+       "<td>V8_delay</td>\n",
+       "<td>=BLOB=</td></tr><tr><td>bobrick20231114_.nwb</td>\n",
+       "<td>4</td>\n",
+       "<td>bobrick20231114_ODPCRGFSVG.nwb</td>\n",
+       "<td>d3afbb39-977d-4eb0-ba94-73349593283e</td>\n",
+       "<td>V8_delay</td>\n",
+       "<td>=BLOB=</td> </tr> </tbody>\n",
        "        </table>\n",
        "        \n",
-       "        <p>Total: 0</p></div>\n",
+       "        <p>Total: 2</p></div>\n",
        "        "
       ],
       "text/plain": [
-       "*nwb_file_name *epoch    analysis_file_ trial_info_obj parser     descriptor\n",
-       "+------------+ +-------+ +------------+ +------------+ +--------+ +--------+\n",
-       "\n",
-       " (Total: 0)"
+       "*nwb_file_name *epoch    analysis_file_ trial_info_obj parser       descriptor\n",
+       "+------------+ +-------+ +------------+ +------------+ +----------+ +--------+\n",
+       "bobrick2023111 2         bobrick2023111 294c1093-2c2f- V8_delay     =BLOB=    \n",
+       "bobrick2023111 4         bobrick2023111 d3afbb39-977d- V8_delay     =BLOB=    \n",
+       " (Total: 2)"
       ]
      },
      "execution_count": 6,
@@ -429,17 +432,26 @@
        "                            <p id=\"nonprimary\">analysis_parameters</p>\n",
        "                            <span class=\"djtooltiptext\">additional relevant parameters. Currently used only for analyses</span>\n",
        "                        </div> </th> </tr> </thead>\n",
-       "            <tbody> <tr>  </tr> </tbody>\n",
+       "            <tbody> <tr> <td>bobrick20231114_LE2O27CJEA.nwb</td>\n",
+       "<td>bobrick20231114_.nwb</td>\n",
+       "<td>=BLOB=</td>\n",
+       "<td></td>\n",
+       "<td>=BLOB=</td></tr><tr><td>bobrick20231114_ODPCRGFSVG.nwb</td>\n",
+       "<td>bobrick20231114_.nwb</td>\n",
+       "<td>=BLOB=</td>\n",
+       "<td></td>\n",
+       "<td>=BLOB=</td> </tr> </tbody>\n",
        "        </table>\n",
        "        \n",
-       "        <p>Total: 0</p></div>\n",
+       "        <p>Total: 2</p></div>\n",
        "        "
       ],
       "text/plain": [
        "*analysis_file nwb_file_name  analysis_f analysis_file_ analysis_p\n",
        "+------------+ +------------+ +--------+ +------------+ +--------+\n",
-       "\n",
-       " (Total: 0)"
+       "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
+       "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
+       " (Total: 2)"
       ]
      },
      "execution_count": 7,
@@ -461,7 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select a specific epoch for the inserted session\n",
+    "key = {\"nwb_file_name\": nwb_file_name, \"epoch\": 4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +653,7 @@
        "</table><p>... and 20 more rows.</p></details></div>"
       ],
       "text/plain": [
-       "pandas_table hdmf.common.table.DynamicTable at 0x140572421786784\n",
+       "pandas_table hdmf.common.table.DynamicTable at 0x139845719096480\n",
        "Fields:\n",
        "  colnames: ['start_time' 'end_time' 'lockout_starts' 'lockout_ends' 'during_lockout'\n",
        " 'lockout_type' 'rw_start' 'rw_end' 'leave_home' 'leave_rw' 'trial_type'\n",
@@ -662,18 +684,13 @@
        "  id: id <class 'hdmf.common.table.ElementIdentifiers'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# from pynwb import NWBHDF5IO\n",
-    "# filename = \"bobrick20231204_V8CPDSZ13B.nwb\"\n",
-    "# filepath = filepath = (AnalysisNwbfile & {\"analysis_file_name\" : filename}).fetch1(\"analysis_file_abs_path\")\n",
-    "# io = NWBHDF5IO(filepath, mode=\"r\")\n",
-    "# nwbfile = io.read()\n",
-    "\n",
+    "# retrieve a dataframe containing info from each trial on the selected epoch\n",
     "filename = (TrialInfo & key).fetch1(\"analysis_file_name\")\n",
     "obj_id = (TrialInfo & key).fetch1(\"trial_info_object_id\")\n",
     "filepath = (AnalysisNwbfile & {\"analysis_file_name\" : filename}).fetch1(\"analysis_file_abs_path\")\n",
@@ -702,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -717,6 +734,7 @@
     }
    ],
    "source": [
+    "# optional: visualize landmark times during epoch\n",
     "V8TrialParser.plot_trials(trials_df, key)"
    ]
   },
@@ -724,9 +742,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleanup\n",
-    "* Deletes analysis file from the AnalysisNwbfile table, which automatically removes the corresponding entry in the TrialsInfo table\n",
-    "* Deletes analysis file from banyan"
+    "## Deleting Entries\n",
+    "* Delete analysis file from the AnalysisNwbfile table, which automatically removes the corresponding entry in the TrialsInfo table\n",
+    "* Remove the unused analysis files from storage"
    ]
   },
   {
