descriptor retrieval documentation

--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -483,6 +483,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'statescript': 'V8pre_delay_locknoise_uw.sc',\n",
+       " 'lockout_period': 30.0,\n",
+       " 'python_script': 'V8.py',\n",
+       " 'outer_reps': 15,\n",
+       " 'num__goals': 1,\n",
+       " 'forage_num': 1}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# accessing trial descriptors\n",
+    "(TrialInfo & key).fetch1(\"descriptors\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
