correct num_goals field name

--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -10,23 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2024-03-14 17:19:11,119][INFO]: Connecting molly@gl-ash.biostr.washington.edu:3306\n",
-      "[2024-03-14 17:19:11,140][INFO]: Connected molly@gl-ash.biostr.washington.edu:3306\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import datajoint as dj\n",
     "\n",
-    "dj.config['database.host'] = \"gl-ash.biostr.washington.edu\" # enter datajoint host url\n",
-    "dj.config['database.user'] = \"molly\" # enter datajoint username\n",
+    "dj.config['database.host'] = \"\" # enter datajoint host url\n",
+    "dj.config['database.user'] = \"\" # enter datajoint username\n",
     "dj.config['database.port'] = 3306\n",
     "\n",
     "from spyglass.utils.nwb_helper_fn import get_nwb_file\n",
@@ -483,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -493,11 +484,11 @@
        " 'lockout_period': 30.0,\n",
        " 'python_script': 'V8.py',\n",
        " 'outer_reps': 15,\n",
-       " 'num__goals': 1,\n",
+       " 'num_goals': 1,\n",
        " 'forage_num': 1}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
