update deletion workflow

--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -775,9 +775,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deleting Entries\n",
-    "* Delete analysis file from the AnalysisNwbfile table, which automatically removes the corresponding entry in the TrialsInfo table\n",
-    "* Remove the unused analysis files from storage"
+    "## Deleting Entries"
    ]
   },
   {
