TrialInfo helper functions and simplified deletion process

--- a/notebooks/TrialInfo.ipynb
+++ b/notebooks/TrialInfo.ipynb
@@ -10,9 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-03-15 16:28:15,080][INFO]: Connecting molly@gl-ash.biostr.washington.edu:3306\n",
+      "[2024-03-15 16:28:15,105][INFO]: Connected molly@gl-ash.biostr.washington.edu:3306\n"
+     ]
+    }
+   ],
    "source": [
     "import datajoint as dj\n",
     "import sys\n",
@@ -190,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing insert of a single session:\n",
+    "## Inserting epochs from a single session:\n",
     "Normally this would be auto computed from each entry in StateScriptFile, but for now we can test inserting a single session"
    ]
   },
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -434,11 +443,7 @@
        "                            <p id=\"nonprimary\">analysis_parameters</p>\n",
        "                            <span class=\"djtooltiptext\">additional relevant parameters. Currently used only for analyses</span>\n",
        "                        </div> </th> </tr> </thead>\n",
-       "            <tbody> <tr> <td>bobrick20231114_08Y3KCF90R.nwb</td>\n",
-       "<td>bobrick20231114_.nwb</td>\n",
-       "<td>=BLOB=</td>\n",
-       "<td></td>\n",
-       "<td>=BLOB=</td></tr><tr><td>bobrick20231114_85N601WSWK.nwb</td>\n",
+       "            <tbody> <tr> <td>bobrick20231114_85N601WSWK.nwb</td>\n",
        "<td>bobrick20231114_.nwb</td>\n",
        "<td>=BLOB=</td>\n",
        "<td></td>\n",
@@ -446,14 +451,10 @@
        "<td>bobrick20231114_.nwb</td>\n",
        "<td>=BLOB=</td>\n",
        "<td></td>\n",
-       "<td>=BLOB=</td></tr><tr><td>bobrick20231114_P85E8D52ZQ.nwb</td>\n",
-       "<td>bobrick20231114_.nwb</td>\n",
-       "<td>=BLOB=</td>\n",
-       "<td></td>\n",
        "<td>=BLOB=</td> </tr> </tbody>\n",
        "        </table>\n",
        "        \n",
-       "        <p>Total: 4</p></div>\n",
+       "        <p>Total: 2</p></div>\n",
        "        "
       ],
       "text/plain": [
@@ -461,12 +462,10 @@
        "+------------+ +------------+ +--------+ +------------+ +--------+\n",
        "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
        "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
-       "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
-       "bobrick2023111 bobrick2023111 =BLOB=                    =BLOB=    \n",
-       " (Total: 4)"
+       " (Total: 2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,6 +802,7 @@
     }
    ],
    "source": [
+    "# Deletes TrialInfo entries from this session\n",
     "(TrialInfo & {\"nwb_file_name\" : \"bobrick20231114_.nwb\"}).delete()"
    ]
   },
@@ -925,7 +925,7 @@
    ],
    "source": [
     "# Automatically deletes AnalysisNwbfile entries that are not referenced a downstream table\n",
-    "# Removes the filepath entries for NWB files that are not in use.\n",
+    "# AND removes the filepath entries for NWB files that are not in use.\n",
     "AnalysisNwbfile.nightly_cleanup()"
    ]
   }
